2008-08-07  Ulrich Drepper  <drepper@redhat.com>

	[BZ #6790]
	* sysdeps/unix/sysv/linux/bits/in.h (IP_PMTUDISC_PROBE): Define.
	(IPV6_PMTUDISC_PROBE): Likewise.

2008-08-07  Pete Eberlein  <eberlein@us.ibm.com>

	[BZ #6791]
	* sysdeps/unix/sysv/linux/powerpc/bits/mman.h (PROT_SAO): Define.

2008-08-01  Steven Munroe  <sjmunroe@us.ibm.com>
	    Carlos Eduardo Seo  <cseo@linux.vnet.ibm.com>

	[BZ #6817]
	* sysdeps/powerpc/dl-procinfo.c (_dl_powerpc_cap_flags):
	Added the members 'vsx' and 'arch_2_06'.
	(_dl_powerpc_platforms): Add the member 'power7'.
	* sysdeps/powerpc/dl-procinfo.h: Modify _DL_HWCAP_FIRST
	to reflect the changes required by VSX and ISA 2.06.
	Modify _DL_PLATFORMS_COUNT to reflect the addition of
	'power7'.
	Defined PPC_PLATFORM_POWER7.
	(_dl_string_platform): Add support for POWER7.
	* sysdeps/powerpc/sysdep.h: Define bit masks for VSX
	capability and ISA 2.06.

2008-08-07  Ulrich Drepper  <drepper@redhat.com>

	[BZ #6824]
	* sysdeps/unix/sysv/linux/powerpc/bits/mathinline.h: Use correct
	macro to detect use of 128 bit long double.
	Patch by Ryan S. Arnold <rsa@us.ibm.com>.

2008-08-05  Ulrich Drepper  <drepper@redhat.com>

	* scripts/gen-as-const.awk: Use 32-bit values on 32-bit platforms.

	[BZ #5794]
	* sysdeps/i386/fpu/s_expm1l.S: Simply use exp implementation for large
	parameters.
	* sysdeps/x86_64/fpu/s_expm1l.S: Likewise.
	Patch by Denys Vlasenko <dvlasenk@redhat.com>.

2008-08-03  Ulrich Drepper  <drepper@redhat.com>

	* nscd/connections.c (main_loop_poll): Pass a buffer which is
	guaranteed to be large enough to read inotify event.  Ignore
	EAGAIN error.  Better error message.  Add branch predicition.
	(main_loop_epoll): Likewise.

2008-08-02  Roland McGrath  <roland@frob.com>

	* sysdeps/mach/i386/machine-lock.h (__spin_unlock, __spin_try_lock):
	Add memory clobbers.

2008-08-02  Ulrich Drepper  <drepper@redhat.com>

	* manual/arith.texi: Avoid @strong{Note:}.
	* manual/creature.texi: Likewise.
	* manual/filesys.texi: Likewise.